--- a/src/app/components/welcome-quizz/welcome-quizz.component.html
+++ b/src/app/components/welcome-quizz/welcome-quizz.component.html
@@ -6,8 +6,8 @@
             Bienvenue dans l'application de quiz TripMemories
         </h1>
         <p class="text-left text-lg">
-            Ce quiz sur {{ poiName }} contiendra un total de {{ nbrQuestions }} questions. Chaque
-            question vaut 10 points
+            Ce quiz {{ poiName ? 'sur ' + poiName : '' }} contiendra un total de
+            {{ nbrQuestions }} questions. Chaque question vaut 10 points
         </p>
         <h4 class="text-2xl font-bold mt-5">Règles :</h4>
         <ol class="list-decimal ml-5 text-lg">
@@ -15,6 +15,9 @@
             <li>Une réponse incorrecte vous retire 5 points</li>
             <li>Vous aurez 10 secondes pour répondre à chaque question</li>
             <li>Rafraîchir la page réinitialisera le quiz</li>
+            <li *ngIf="!name">
+                Comme vous n'êtes pas connecté, votre progression ne sera pas enregistré
+            </li>
         </ol>
         <h1 class="text-center font-semibold text-4xl mt-10 mb-10">
             Bonne chance à toi {{ name && name.split(' ')[0] }} !
@@ -22,16 +25,10 @@
 
         <div class="flex justify-center">
             <div class="flex flex-row flex-wrap justify-center sm:w-full md:w-11/12 lg:w-1/2">
-                <input
-                    [placeholder]="name"
-                    pInputText
-                    [disabled]="name || name === undefined"
-                    class="text-black placeholder-gray-600 w-full px-4 py-2.5 mt-2 text-base transition duration-500 ease-in-out transform border-transparent rounded-lg bg-gray-200 focus:border-blueGray-500 focus:bg-white dark:focus:bg-gray-100 focus:outline-none focus:shadow-lg focus:ring-0 ring-offset-current ring-offset-1 ring-gray-400"
-                />
                 <button
                     pButton
                     class="transition mt-5 ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 duration-300 shadow-lg shadow-blue-500/50 py-2 px-3 rounded-lg font-bold text-white hover:bg-blue-600"
-                    [disabled]="nbrQuestions === 0 || !name"
+                    [disabled]="nbrQuestions === 0"
                     (click)="start()"
                 >
                     Commencer le quiz
