--- a/src/app/components/question/question.component.css
+++ b/src/app/components/question/question.component.css
@@ -40,6 +40,11 @@
 }
 
 .category {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
   text-align: center;
 }
 
@@ -76,6 +81,12 @@
   color: white !important;
 }
 
+.selected {
+  background-color: #007bff !important;
+  color: white !important;
+  border: 2px solid #00326c;
+}
+
 .next-button {
   width: 100%;
   height: 3rem;
@@ -84,4 +95,8 @@
   border: none;
   border-radius: 8px;
   cursor: pointer;
+}
+
+.customProgress .ui-progressbar .ui-progressbar-value {
+  background: red;
 }
