update get my posts and creation update post

--- a/src/app/components/card-questions-quiz/card-questions-quiz.component.html
+++ b/src/app/components/card-questions-quiz/card-questions-quiz.component.html
@@ -16,7 +16,7 @@
         </ng-template>
         <div class="flex flex-col gap-2">
             <div class="flex flex-row justify-between text-sm">
-                <p>Nbr réponses: {{ question?.answers?.length }}</p>
+                <p>Nombres réponses: {{ question?.answers?.length }}</p>
                 <!--                <div class="flex flex-row items-center gap-2">
                     <p>Prix: {{ ques?.price }}€</p>
                     <svg
@@ -77,7 +77,7 @@
 </div>
 <div class="card flex justify-content-center">
     <p-dialog
-        header="Modifier le billet"
+        header="Modifier la question"
         class="flex flex-col"
         [modal]="true"
         [draggable]="false"
