--- a/src/app/container/profil/my-posts/my-posts.component.html
+++ b/src/app/container/profil/my-posts/my-posts.component.html
@@ -2,6 +2,7 @@
     pButton
     [outlined]="true"
     icon="pi pi-plus"
+    *ngIf="userId !== 3"
     [style]="{
         border: '2px solid grey',
         width: '270px',
