--- a/src/app/pages/profil-page/profil-page.component.html
+++ b/src/app/pages/profil-page/profil-page.component.html
@@ -56,7 +56,7 @@
         </div>
         <div [ngSwitch]="activeTab">
             <ng-container *ngSwitchCase="'posts'">
-                <app-my-posts></app-my-posts>
+                <app-my-posts [userId]="userType" [poiId]="poiId"></app-my-posts>
             </ng-container>
             <ng-container *ngSwitchCase="'friends'">
                 <app-my-friends />
