update UI of some pages

--- a/src/app/components/create-question/create-question.component.html
+++ b/src/app/components/create-question/create-question.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="questionForm" (ngSubmit)="update ? updateQuestion() : save()" class="mb-4">
+<form [formGroup]="questionForm" (ngSubmit)="update ? updateQuestion() : save()">
     <div class="p-field question-field">
         <label for="question" class="mr-6 text-xl font-semibold text-['Urbanist']"
             >Question :</label
