--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col h-screen">
-    <div class="flex-grow">
+    <div class="flex-grow flex flex-col">
         <app-header *ngIf="showHeaderFooter" class="z-50 fixed w-full"></app-header>
         <router-outlet></router-outlet>
-        <app-footer *ngIf="showHeaderFooter" class="z-50 w-full"></app-footer>
+        <app-footer *ngIf="showHeaderFooter" class="z-50 w-full mt-auto"></app-footer>
     </div>
 </div>
