--- a/src/app/components/create-question/create-question.component.css
+++ b/src/app/components/create-question/create-question.component.css
@@ -37,3 +37,10 @@
   justify-content: space-between;
   margin-top: 1rem;
 }
+
+.photo-upload {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 10px;
+}
