Feature/multiple upgrades (#54)
* update poi page adding scroller

* update get my posts and creation update post

* update UI of some pages

* update UI basket page

* add profil pic

* adding image in form create question poi

--- a/src/app/components/create-question/create-question.component.css
+++ b/src/app/components/create-question/create-question.component.css
@@ -11,7 +11,7 @@
 .answer-group {
   display: flex;
   align-items: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.9rem;
 }
 
 .answer-input {
@@ -36,4 +36,11 @@
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
+}
+
+.photo-upload {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 10px;
 }
