--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-row h-full">
-    <div class="flex-[40] relative">
+    <div class="flex-[40] h-screen relative">
         <img ngSrc="assets/login/background_login.png" fill />
     </div>
     <div class="flex-[60]">
