--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -31,12 +31,6 @@
                     Les derniers posts du point d'intérêt "{{ poi.name }}"
                 </h3>
                 <div class="flex flex-row gap-2">
-                    <!--                    <a
-                        class="flex items-center p-2 rounded-full border-[1px] border-[var(&#45;&#45;primary)] border-solid text-[var(&#45;&#45;primary)] font-['Urbanist']"
-                        [routerLink]="['/feed']"
-                    >
-                        Voir tous les posts
-                    </a>-->
                     <button
                         pButton
                         class="p-button-rounded p-button-primary p-button-outlined"
@@ -49,6 +43,12 @@
                         class="p-button-rounded p-button-primary p-button-outlined"
                         label="Démarrer un quiz sur ce lieu"
                         (click)="openDialogQuiz()"
+                    ></button>
+                    <button
+                        pButton
+                        class="p-button-rounded p-button-primary p-button-outlined"
+                        label="Créer un meet (rencontre) pour ce lieu"
+                        (click)="openDialogMeet()"
                     ></button>
                 </div>
             </div>
@@ -108,6 +108,62 @@
                 ></app-buy-ticket-poi-card>
             </div>
         </div>
+        <div class="mt-16">
+            <div class="flex flex-row justify-between">
+                <h3 class="text-4xl font-bold font-['Urbanist']">
+                    Les meets disponible pour "{{ poi.name }}"
+                </h3>
+                <div class="flex flex-row ml-auto gap-2">
+                    <div
+                        class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
+                        (click)="scrollLeft()"
+                        #leftButton
+                        [ngClass]="{
+                            'bg-gray-500': isAtLeftEnd,
+                            'bg-[var(--primary)]': !isAtLeftEnd
+                        }"
+                    >
+                        <img
+                            ngSrc="assets/poi/arrow_scroll.png"
+                            width="12"
+                            height="12"
+                            alt="fleche scroll"
+                            class="rotate-180"
+                        />
+                    </div>
+                    <div
+                        class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
+                        (click)="scrollRight()"
+                        #rightButton
+                        [ngClass]="{
+                            'bg-gray-500': isAtRightEnd,
+                            'bg-[var(--primary)]': !isAtRightEnd
+                        }"
+                    >
+                        <img
+                            ngSrc="assets/poi/arrow_scroll.png"
+                            width="12"
+                            height="12"
+                            alt="fleche scroll"
+                        />
+                    </div>
+                </div>
+            </div>
+            <div #scrollContainer class="flex flex-row flex-nowrap gap-10 overflow-hidden">
+                <app-currently-at-card
+                    *ngFor="let currentlyAt of poiNear"
+                    [image]="currentlyAt.cover?.url"
+                    [title]="currentlyAt.name"
+                    [description]="currentlyAt.description"
+                    [infoPlus]="currentlyAt.type?.name"
+                    [link]="currentlyAt.id?.toString()"
+                ></app-currently-at-card>
+            </div>
+            <span *ngIf="poiNear.length === 0" class="text-2xl text-red-500 font-['Urbanist']">
+                Aucun lieu proche dans ce coin</span
+            >
+        </div>
+
         <div class="mt-16">
             <div class="flex flex-row justify-between">
                 <h3 class="text-4xl font-bold font-['Urbanist']">Autour de "{{ poi.name }}"</h3>
@@ -177,6 +233,23 @@
             [inputPoiId]="poi.id"
             [inputPoiName]="poi.name"
         ></app-create-post-card>
+    </ng-template>
+</p-dialog>
+<p-dialog
+    [header]="'Créer un meet (rencontre) pour ' + poi.name"
+    class="flex flex-col"
+    [modal]="true"
+    [draggable]="false"
+    [(visible)]="showDialogMeet"
+    [style]="{ width: '50rem', borderRadius: '9999px' }"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+    <ng-template pTemplate="content">
+        <app-create-meet-card
+            [inputPoiName]="poi.name"
+            [inputPoiId]="poi.id"
+            [ticketsInput]="tickets"
+        ></app-create-meet-card>
     </ng-template>
 </p-dialog>
 <p-dialog
