show my meets and create meet my page Ok

--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -249,6 +249,7 @@
             [inputPoiName]="poi.name"
             [inputPoiId]="poi.id"
             [ticketsInput]="tickets"
+            (meetCreated)="reloadMeets()"
         ></app-create-meet-card>
     </ng-template>
 </p-dialog>
