--- a/src/app/components/meet-participants/meet-participants.component.html
+++ b/src/app/components/meet-participants/meet-participants.component.html
@@ -49,3 +49,8 @@
         ></button>
     </ng-template>
 </p-card>
+<app-payment-card
+    [showPaymentDialog]="showPaymentDialog"
+    [paymentIntent]="paymentIntent"
+    (closeDialog)="closePaymentDialog()"
+></app-payment-card>
