--- a/src/app/pages/meet-page/meet-page.component.html
+++ b/src/app/pages/meet-page/meet-page.component.html
@@ -34,6 +34,10 @@
                 [userCount]="usersCount"
                 [nbrParticipants]="meet?.size"
                 [isOwner]="isOwner"
+                [hasPaid]="hasPaid"
+                [hasJoined]="hasJoined"
+                [canJoin]="canJoin"
+                [isLockedMeet]="isLocked"
                 [idMeet]="idMeet"
             ></app-meet-participants>
         </div>
